--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 version: 0.5.0.{build}
-os: Visual Studio 2015
-configuration: Release
+image:
+- Visual Studio 2015
+- Visual Studio 2013configuration: Release
 platform: Any CPU
 environment:
   COVERALLS_REPO_TOKEN:
