--- a/GoogleTestAdapter/TestAdapter.Tests/packages.config
+++ b/GoogleTestAdapter/TestAdapter.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="4.2.1" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.1.1" targetFramework="net452" developmentDependency="true" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
   <package id="OpenCover" version="4.6.261-rc" targetFramework="net452" />
 </packages>
