--- a/GoogleTestAdapter/VsPackage.Tests/packages.config
+++ b/GoogleTestAdapter/VsPackage.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.1.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.1.24720" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Settings.14.0" version="14.1.24720" targetFramework="net452" />
