--- a/GoogleTestAdapter/VsPackage/packages.config
+++ b/GoogleTestAdapter/VsPackage/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Net.Compilers" version="1.1.1" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.VSSDK.BuildTools" version="14.0.23107" targetFramework="net45" />
   <package id="VSSDK.ComponentModelHost.11" version="11.0.0" targetFramework="net45" />
   <package id="VSSDK.DTE.10" version="10.0.0" targetFramework="net45" />
