--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,6 @@
 version: 0.5.0.{build}
-image:
-- Visual Studio 2015
-- Visual Studio 2013configuration: Release
+os: Visual Studio 2015
+configuration: Release
 platform: Any CPU
 environment:
   COVERALLS_REPO_TOKEN:
@@ -9,6 +8,7 @@ environment:
   RELEASE_KEY_PASSWORD:
     secure: 3+fpAMwxomiOZ5fzpb+3kjV4RvPSn0GRvFp71bZZs3QQr06zNU2Wvu4p77dmTKH+
 install:
+- cinst visualstudiocommunity2013
 - ps: >-
     if ($env:APPVEYOR_REPO_TAG -eq "true") {
         nuget install secure-file -ExcludeVersion
